Fixin bucks and include forloops. Starts to look good. Also cleaning up code. #Spaghetticode needs a home too.