@@ -19,6 +19,7 @@ import monalisa.addons.reachability.ReachabilityEdge;
 import monalisa.addons.reachability.ReachabilityEvent;
 import monalisa.addons.reachability.ReachabilityGraph;
 import monalisa.addons.reachability.ReachabilityNode;
+import monalisa.addons.reachability.constraints.ConstraintFrame;
 import monalisa.data.pn.PetriNet;
 import monalisa.data.pn.Place;
 import monalisa.data.pn.Transition;
@@ -37,7 +38,9 @@ public class BreadthFirst extends AbstractReachabilityAlgorithm {
    private HashMap<Place, Long> eTarget;
    private HashMap<Place, Long> eStart;
    public static HashMap<Place, Long> updateFrame = new HashMap<>();
-  
+   public static ArrayList<Transition> usedTransitions = new ArrayList<>();
+   public static HashMap<Place, Long> firstNode = new HashMap<>();
+   
    public static HashMap<Place, Long> getUpdateFrame(){
        return updateFrame;
    }
@@ -77,10 +80,10 @@ public class BreadthFirst extends AbstractReachabilityAlgorithm {
             // If start and target are equal. Stop program.
             PetriNet newPN = new PetriNet();
             
-            if(eStart.equals(eTarget)){
+            /**if(eStart.equals(eTarget)){
                 fireReachabilityUpdate(ReachabilityEvent.Status.EQUALNODE, 0, null);
                 return;
-            }
+            }*/
             fireReachabilityUpdate(ReachabilityEvent.Status.STARTED, 0, null);
             int counter = 0;
             
@@ -93,13 +96,14 @@ public class BreadthFirst extends AbstractReachabilityAlgorithm {
             ArrayList<ReachabilityNode> rNodeList = new ArrayList<>();
             
             ReachabilityNode root = new ReachabilityNode(null, null);
+            HashMap<Place, Long> newMarkingMap = new HashMap<>();
             /**
              * Every node is initialized as reachabilitynode
              * With prenode
              */
             //TODO: Include here computeMarking?
             for(Map.Entry<Place, Long> entry: marking.entrySet()){
-                System.out.println("Erstellen: "+ entry);
+                newMarkingMap.put(entry.getKey(), entry.getValue());
                 HashMap<Place, Long> work = new HashMap<>();
 
                 if(rNodeList.isEmpty()){
@@ -123,7 +127,6 @@ public class BreadthFirst extends AbstractReachabilityAlgorithm {
             if(rNodeList.get(0).getMarking().keySet().equals(rNodeList.get(1).getMarking().keySet())){
                 rNodeList.remove(0);
                 ReachabilityNode exchange = new ReachabilityNode(rNodeList.getFirst().getMarking(), rNodeList.getLast());
-                System.out.println("After: "+exchange.getMarking()+" b: "+exchange.getPrev().getMarking());
                 //rNodeList.remove(1);
                 rNodeList.remove(0);
                 rNodeList.add(0, exchange);
@@ -134,18 +137,21 @@ public class BreadthFirst extends AbstractReachabilityAlgorithm {
             // Getting active transitions
             HashSet<Transition> activeTransitions =  pf.computeActiveTransitions(marking);
             
-            System.out.println("Transition: "+ activeTransitions);
             
             // Iterate over activated transitions
             // rNodeList contents reachabilitynodes with prenode
             ArrayList<ReachabilityNode> reachabilityNodesList = new ArrayList<>();
             ArrayList<Transition> backtrack = new ArrayList<>();
             //reachabilityNodesList.addAll(rNodeList);
-            HashMap<Place, Long> newMarkingMap = new HashMap<>();
+            
+            
             HashMap<Place, Long> resetMap = new HashMap<>();
-           // while(!rNodeList.isEmpty() && !isInterrupted() && reachabilityNodesList.size()<= rNodeList.size()){
+            firstNode = eStart;
+            int secCount = 0;
+            System.out.println("START: "+firstNode);
             while(!rNodeList.isEmpty() && !isInterrupted()){   
                 counter +=1;
+                 
                 if (counter % 100 == 0) {
                     fireReachabilityUpdate(ReachabilityEvent.Status.PROGRESS, counter, null);
                 }
@@ -153,66 +159,143 @@ public class BreadthFirst extends AbstractReachabilityAlgorithm {
                  ReachabilityNode workingNode = rNodeList.get(0);//Nimm den workingNode und gucke ihn an
                  //rNodeList.remove(rNodeList.get(0));// Angefasste nodes müssen aus der Liste entfernt werden
                  reachabilityNodesList.add(workingNode);
-                 rNodeList.forEach((a)->System.out.println("rNodeList: "+a.getMarking()));
                  // Examine transitions. Look for t that belongs to working node.
-                 for(Transition t : activeTransitions){
-                     System.out.println("Start ForLoop Transition: "+t+ " boolean: "+t.getActive());
-                     if(t.getUsed()== false){
+                System.out.println("");
+                System.out.println("");
+                System.out.println("");
+                for(Transition t : activeTransitions){
+                    System.out.println("Start ForLoop Transition: "+t+ " boolean: "+t.getActive());
+                    if(t.getUsed()== false){
                      // If workingNode and transition input are equal -> create edge in reachabilitygraph 
                      // between those two nodes
                      HashMap<Place, Long> vNew = eTarget;
                      
-                     System.out.println("T: "+t+" input: "+t.inputs()+" outputs: "+t.outputs()+" workingNode: "+workingNode.getMarking());
                      // If no prenode exists. Transition only updates output.
                    
-                    if(t.inputs().isEmpty()){
+                    if(t.inputs().isEmpty() && !t.outputs().isEmpty()){
                          //Hier: for all outputs aktualisiere places
-                     if(t.outputs().get(0).equals(workingNode.getMarking().keySet().iterator().next())){
-                         HashMap<Place, Long> newMarkingOutputPlace = pf.computeSingleMarking(workingNode.getMarking(), t).getLast();
-                         System.out.println("New outputMarking: "+ newMarkingOutputPlace);
-                         for(ReachabilityNode n : reachabilityNodesList){
-                             if(n.getMarking().keySet().equals(newMarkingOutputPlace.keySet())){
-                                 System.out.println("Old: "+n.getMarking());
-                                 n.getMarking().put(n.getMarking().keySet().iterator().next(), newMarkingOutputPlace.values().iterator().next());
-                                 System.out.println("New: "+n.getMarking());
-                                 // if marking is updated. Replace in rNodeList. Clear other list
-                                 for(ReachabilityNode old : rNodeList){
-                                     if(n.getMarking().keySet().equals(old.getMarking().keySet())){
-                                        System.out.println("rNodeOld: "+old.getMarking());
-                                         //n = old;7
-                                        old.getMarking().put(old.getMarking().keySet().iterator().next(), newMarkingOutputPlace.values().iterator().next());
-                                        rNodeList.addFirst(old);
-                                        resetMap.put(old.getMarking().keySet().iterator().next(), newMarkingOutputPlace.values().iterator().next());
-                                        newMarkingMap.put(old.getMarking().keySet().iterator().next(), newMarkingOutputPlace.values().iterator().next());
-                                        System.out.println("rNodeNew: "+old.getMarking());
-                                        break; // Not sure if that's needed
-                                     }
-                                     
-                                 }
+                        System.out.println("----------Only Output exist--------------");
+                        for(Place p : t.outputs()){
+                            HashMap<Place, Long> updateNode = new HashMap<>();
+                            // Iterate through latest HashMap.Take 
+                            for(Map.Entry<Place, Long> entry : newMarkingMap.entrySet()){
+                                if(p.equals(entry.getKey())){
+                                    updateNode.put(entry.getKey(), entry.getValue());
                                  
+                                    HashMap<Place, Long> newMarkingOutputPlace = pf.computeSingleMarking(updateNode, t).getLast(); //workingnode.getMarking().getLast
+                                    newMarkingMap.putAll(newMarkingOutputPlace);
+                                    // Update reachabilitynode value
+                                    for(ReachabilityNode n : reachabilityNodesList){
+                                        if(n.getMarking().keySet().equals(newMarkingOutputPlace.keySet())){
+                                            n.getMarking().put(n.getMarking().keySet().iterator().next(), newMarkingOutputPlace.values().iterator().next());
+                                            
+                                        }
+                                    }
+                                }
                              }
-                             
-                         }
-                         
-
                      }
-                     
-                     rNodeList.forEach(v->System.out.println("END1: "+v.getMarking()));
-                     rNodeList.remove(0);
-                     rNodeList.get(0).setVisited();
-                     vertices.add(rNodeList.get(0));
-                     rNodeList.forEach(v->System.out.println("ENDDanach: "+v.getMarking()));
-                     }t.setUsed();
+                    t.setUsed();
+                }
+                System.out.println("--------------------------------");
+                System.out.println("--- NewMarking: "+newMarkingMap+" ---");
+                System.out.println("--------------------------------");
+                System.out.println("---------- "+t+" is used: "+t.getUsed()+" ------------");
+                System.out.println("----------Only Output End--------------");
+                System.out.println("");
+                System.out.println("");
+                System.out.println("");
+                                                 // if marking is updated. Replace in rNodeList. Clear other list
+                                               /** for(ReachabilityNode old : rNodeList){
+                                                    if(n.getMarking().keySet().equals(old.getMarking().keySet())){
+                                                       System.out.println("rNodeOld: "+old.getMarking());
+                                                         //n = old;7
+                                                        old.getMarking().put(old.getMarking().keySet().iterator().next(), newMarkingOutputPlace.values().iterator().next());
+                                                        rNodeList.addFirst(old);
+                                                        resetMap.put(old.getMarking().keySet().iterator().next(), newMarkingOutputPlace.values().iterator().next());
+                                                        newMarkingMap.put(old.getMarking().keySet().iterator().next(), newMarkingOutputPlace.values().iterator().next());
+                                                        System.out.println("rNodeNew: "+old.getMarking());
+                                                        t.setUsed();
+                                               
+                                              //  break; // Not sure if that's needed
+                                             }
+
+                                         }
+                                     }
+                                 }
+                                     }}
+                         }// End n(t.outputs().get(0).equals(workingNode.getMarking().keySet().iterator().next()))
+                         }//End ForLoop*/
+                    //rNodeList.forEach(v->System.out.println("END1: "+v.getMarking()));
+                   // rNodeList.remove(0);
+                    // rNodeList.get(0).setVisited();
+                    // vertices.add(rNodeList.get(0));
+                    //rNodeList.forEach(v->System.out.println("ENDDanach: "+v.getMarking()));
+                     //t.setUsed();
                     /**
                      * If transition has input
                      * Check if output exist. Either update in and output or just input
                      */
-                    if(!t.inputs().isEmpty()){
-                        if(!t.outputs().isEmpty()){
-                            if(t.inputs().get(0).equals(workingNode.getMarking().keySet().iterator().next())){
+                    if(!t.inputs().isEmpty() && !t.outputs().isEmpty()){ // if transition has input and out
+                        // iterate through both and update marking
+                        System.out.println("----------In/Output exist--------------");
+                        for(Place pIN : t.inputs()){
+                            for(Place pOUT : t.outputs()){
+                                HashMap<Place, Long> updateNodeIN = new HashMap<>();
+                                HashMap<Place, Long> updateNodeOUT = new HashMap<>();
+                                for(Map.Entry<Place, Long> entry : newMarkingMap.entrySet()){
+                                    if(pIN.equals(entry.getKey())){
+                                        HashMap<Place, Long> newMarkingInputPlace = pf.computeSingleMarking(updateNodeIN, t).getFirst();
+                                        newMarkingMap.putAll(newMarkingInputPlace);
+                                    }
+                                    if(pOUT.equals(entry.getKey())){
+                                        HashMap<Place, Long> newMarkingOutputPlace = pf.computeSingleMarking(updateNodeOUT, t).getLast();
+                                        newMarkingMap.putAll(newMarkingOutputPlace);
+                                    }
+                                    
+                                }
+                            }
+                        }
+                        t.setUsed();
+                        System.out.println("--------------------------------");
+                        System.out.println("--- NewMarking: "+newMarkingMap+" ---");
+                        System.out.println("--------------------------------");
+                        System.out.println("---------- "+t+" is used: "+t.getUsed()+" ------------");
+                        System.out.println("----------In/Output End--------------");
+                        System.out.println("");
+                        System.out.println("");
+                        System.out.println("");
+                    }
+                    
+                    
+                    
+                    
+                    if(t.outputs().isEmpty() && !t.inputs().isEmpty()){
+                        System.out.println("----------Only INput exists--------------");
+                        for(Place p : t.inputs()){
+                            HashMap<Place, Long> updateNode = new HashMap<>();
+                            for(Map.Entry<Place, Long> entry : newMarkingMap.entrySet()){
+                                if(p.equals(entry.getKey())){
+                                    HashMap<Place, Long> newMarkingInputPlace = pf.computeSingleMarking(updateNode, t).getFirst();
+                                    newMarkingMap.putAll(newMarkingInputPlace);
+                                }
+                            }
+                        }
+                        t.setUsed();
+                        System.out.println("--------------------------------");
+                        System.out.println("--- NewMarking: "+newMarkingMap+" ---");
+                        System.out.println("--------------------------------");
+                        System.out.println("---------- "+t+" is used: "+t.getUsed()+" ------------");
+                        System.out.println("----------Input End--------------");
+                        System.out.println("");
+                        System.out.println("");
+                        System.out.println("");
+                    }
+                    
+                           /** if(t.inputs().get(0).equals(workingNode.getMarking().keySet().iterator().next())){
+                                // ForLoop for all inputs
                                 System.out.println("VORallem: "+workingNode.getMarking()+" t: "+t+ " tInput: "+t.inputs()+" tout: "+t.outputs());
-                                HashMap<Place, Long> newMarkingInputPlace = pf.computeSingleMarking(workingNode.getMarking(), t).getFirst();
-                                HashMap<Place, Long> newMarkingOutputPlace = pf.computeSingleMarking(workingNode.getMarking(), t).getLast();
+                                HashMap<Place, Long> newMarkingInputPlace = pf.computeSingleMarking(marking, t).getFirst();
+                                HashMap<Place, Long> newMarkingOutputPlace = pf.computeSingleMarking(marking, t).getLast();
                                 System.out.println("NeueIf newMarkingInput: "+newMarkingInputPlace+" newOutput: "+newMarkingOutputPlace);
                                 // New input and output TODO update in list and compute active again
                                 for(ReachabilityNode old : rNodeList){
@@ -221,25 +304,28 @@ public class BreadthFirst extends AbstractReachabilityAlgorithm {
                                         old.getMarking().put(old.getMarking().keySet().iterator().next(), newMarkingInputPlace.values().iterator().next());
                                         System.out.println("New Token for input: "+old.getMarking());
                                         newMarkingMap.put(old.getMarking().keySet().iterator().next(), newMarkingInputPlace.values().iterator().next());
-                                        old.setVisited();
+                                        //old.setVisited();
                                         vertices.add(old);
+                                        //t.setUsed();
                                         resetMap.put(old.getMarking().keySet().iterator().next(), newMarkingInputPlace.values().iterator().next());
                                     }
                                     if(old.getMarking().keySet().equals(newMarkingOutputPlace.keySet())){
                                         old.getMarking().put(old.getMarking().keySet().iterator().next(), newMarkingOutputPlace.values().iterator().next());
                                         System.out.println("New Token for output: "+old.getMarking());
                                         newMarkingMap.put(old.getMarking().keySet().iterator().next(), newMarkingOutputPlace.values().iterator().next());
-                                        old.setVisited();
+                                        //old.setVisited();
                                         vertices.add(old);
+                                        t.setUsed();
                                         resetMap.put(old.getMarking().keySet().iterator().next(), newMarkingOutputPlace.values().iterator().next());
                                     }
                                     
                                 }
                             }//End t.inputs.get(0).equals
-                        }//End if(!t.inputs().isEmpty())
+                     //   }//End if(!t.inputs().isEmpty())*/
                         
                         // if output is empty only update input places
-                        if(t.outputs().isEmpty()){
+                       /** if(t.outputs().isEmpty()){
+                            // For all outputs update token
                             HashMap<Place, Long> newMarkingInputPlace = pf.computeSingleMarking(workingNode.getMarking(), t).getFirst();
                             for(ReachabilityNode old : rNodeList){
                                     if(old.getMarking().keySet().equals(newMarkingInputPlace.keySet())){
@@ -247,20 +333,25 @@ public class BreadthFirst extends AbstractReachabilityAlgorithm {
                                         old.getMarking().put(old.getMarking().keySet().iterator().next(), newMarkingInputPlace.values().iterator().next());
                                         System.out.println("New Token for input: "+old.getMarking());
                                         newMarkingMap.put(old.getMarking().keySet().iterator().next(), newMarkingInputPlace.values().iterator().next());
-                                        old.setVisited();
+                                        //old.setVisited();
                                         vertices.add(old);
+                                        //t.setUsed();
                                         resetMap.put(old.getMarking().keySet().iterator().next(), newMarkingInputPlace.values().iterator().next());
                                     }
                         }
-                        }
-                    }t.setUsed();// End !t.output.isEmpty()
+                        }*/
+                    //}//t.setUsed();// End !t.output.isEmpty()
                     if(t.getUsed()==true && t.getActive()==true){
                         backtrack.add(t);
                         edge.add(new ReachabilityEdge(workingNode.getPrev(), workingNode, t));
                     }
+                  
                    
-                     }
-                 }
+                     
+                 
+                 
+                 vertices.add(workingNode);
+                 rNodeList.get(0).setVisited();
                  rNodeList.remove(0);
                  HashSet<Transition> activeTransitionsUpdate =  pf.computeActiveTransitions(newMarkingMap);
                  System.out.println("Update Transition "+activeTransitions);
@@ -270,20 +361,38 @@ public class BreadthFirst extends AbstractReachabilityAlgorithm {
                  System.out.println("REAL: "+reachabilityNodesList);
                  activeTransitions.forEach((a)->System.out.println("active and used: "+a+" #"+a.getUsed()+" #"+a.getActive()));
                  System.out.println("Visited: "+workingNode.getVisited()+" Node: "+workingNode.getMarking());
-                 resetMap.entrySet().forEach(a -> System.out.println("## "+a.getKey()+" value: "+a.getValue()));
-                 if(workingNode.getMarking().keySet().equals(eTarget.keySet())&& workingNode.getVisited()==true){
+                 if(workingNode.getMarking().keySet().equals(eTarget.keySet())&& workingNode.getVisited()==true ){
+                     secCount +=1;
+                     if(eStart.equals(eTarget)){
+                         
+                             rNodeList.forEach((a)->System.out.println("rNodeListLAST: "+a.getMarking()));
+                             resetMap.entrySet().forEach(a -> System.out.println("## "+a.getKey()+" value: "+a.getValue()));
+                             updateFrame.putAll(resetMap);// Token are right
+                             System.out.println("TABLE: "+updateFrame);
+                             usedTransitions = backtrack;
+                             fireReachabilityUpdate(ReachabilityEvent.Status.SUCCESS, counter, backtrackList(backtrack));
+                             return;
+                         
+                     }if(!eStart.equals(eTarget)){
                      rNodeList.forEach((a)->System.out.println("rNodeListLAST: "+a.getMarking()));
+                     resetMap.entrySet().forEach(a -> System.out.println("## "+a.getKey()+" value: "+a.getValue()));
+                     updateFrame.putAll(resetMap);// Token are right
                      System.out.println("TABLE: "+updateFrame);
+                     usedTransitions = backtrack;
                      fireReachabilityUpdate(ReachabilityEvent.Status.SUCCESS, counter, backtrackList(backtrack));
                      return;
-                 }
+                 }}
                  if(workingNode.getMarking().keySet().equals(eTarget.keySet())&& workingNode.getVisited()==false){
                      fireReachabilityUpdate(ReachabilityEvent.Status.FAILURE, counter, backtrackList(backtrack));
                      return;
                  }
+                 // Here: mark node as visited
+                
             }
-         
+         }
+            }
         }
+
         
         else{
             
